@@ -180,7 +180,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="4.1.5"
+       version="4.1.6"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
